# smtp-2-cf-email-service

./: .gitignore  AGENTS.local.md.example  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: build-binaries.yml  ci.yml
src/: cloudflare.rs  config.rs  lib.rs  main.rs  queue.rs  reload.rs  smtp_server.rs  tls.rs
systemd/: smtp2cf.service
