[package]
name = "smtp2cf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
mailparse = "0.16.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2"] }
rustls = "0.23.32"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smtpd = { version = "0.1.0", features = ["rustls-backend"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.23.0"
