[package]
name = "smtp2cf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
mailparse = "0.16.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2"] }
rustls = "0.23.38"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smtpd = { version = "0.1.0", features = ["rustls-backend"] }
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.27.0"
